Changes for 1.2.7
* Added Technology Frontiers, and ability to customize which tech is available to which player. (squid daddy)

* Changed Pact of Steel 2 to take advantage of new Tech choosing attachments. (veqryn)

* Added a new About... dialog box to main screen. Shows TripleA, engine version, authors, website, as well as a short how-to-play. (veqryn)

* Added a new AI, Dynamix AI, a scripted AI that seeks to be properly coded and easy to understand, as well as solving all problems in moore ai. (wisconsin)

* Added some flags made by Veqryn, and some by Pulicat. Added "airfield" and "harbour" unit images to all nations, thanks to Hepster. (veqryn)

* Created Pact of Steel 2, a mod of pos that runs on ww2v3 rules but with drastic changes. Designed to show off every single feature TripleA has to offer on customizing maps. 
  Includes detailed notes on each any every property, option, attachment that exists in triplea. Can be used as an example by future map makers on what everything should look like when it works. (veqryn)

* Added Pact Of Steel to triplea, thanks to makers: TripleElk and others.  Also fixed baseTiles, updated to current engine. (veqryn)

* Added New World Order to triplea, thanks to makers: Sieg, ErnieBommel, and others. Also updated to remove special characters from name and files, and updated to take advantage of Triggers. (veqryn)

* Deleted unused uncoded game Properties. (veqryn)

* Made "LHTR Carrier production rules" completely over-ride the other 4 carrier-fighter properties, that way it is finaly a single switch toggle for the rules-set. (veqryn)

* Small bug in triggers, production changes were always occuring no matter what, missing brackets. (veqryn)

* Further updates to Trigger Attachments and Support attachments, as well as creating a new property to turn triggers on and off, defaults to false: "Use Triggers". (squid daddy)
