@@ -177,7 +177,7 @@ public class MetaSetupPanel extends SetupPanel
 		"<b>Forum:</b> <a hlink='http://triplea.sourceforge.net/mywiki/Forum'>http://triplea.sourceforge.net/mywiki/Forum</a><br>"+
 		"<b>Ladder:</b> <a hlink='http://www.tripleawarclub.org/'>http://www.tripleawarclub.org/</a></p>"+
 		"<p><b>Very Basic How to Play:</b>"+
-		"<br>Though some games have special rules enforced, most games follow some of these basic guidelines.<br><ol>"+
+		"<br>Though some games have special rules enforced, most games follow most of these basic guidelines.<br><ol>"+
 		"<li>Players start their turn by choosing what they will produce.  They spend the money they gathered during their " +
 			"<br>last turn on new units or even technology.  Units are displayed on the purchase screen as having x Cost, and " +
 			"<br>their attack/defense/movement values.  These units will be put on the board at the end of the player's turn.</li>"+
@@ -185,17 +185,17 @@ public class MetaSetupPanel extends SetupPanel
 			"<br>turn.  Simply click on a unit, then move your mouse to the territory you wish to attack, and then click again " +
 			"<br>to drop it there.  You can deselect a unit by right-clicking.  You can select a path for a unit to take by holding " +
 			"<br>down 'ctrl' and clicking on all the territories on the way to the final territory.  Pressing shift or ctrl while " +
-			"<br>selecting a unit will select all units.</li>"+
+			"<br>selecting a unit will select all units in that territory.</li>"+
 		"<li>Then everyone resolves all the combat battles.  This involves rolling dice for the attacking units and the " +
 			"<br>defending units too.  For example, a <em>Tank</em> might attack at a <em>3</em> meaning that when you roll the dice you need " +
 			"<br>a 3 or less for him to <em>hit</em> the enemy.  If the tank hits the enemy, then the other player chooses one of his " +
-			"<br>units to die, and the battle continues.  After each round of dice, the attack chooses to retreat or press on " +
+			"<br>units to die, and the battle continues.  After each round of dice, the attacker chooses to retreat or press on " +
 			"<br>until he has defeated all enemy units in that territory.  The game rolls the dice for you automatically.</li>"+
 		"<li>After this, the Player may move any units that have not yet moved as a <em>Non-Combat</em> move, and any air units " +
-			"<br>return to friendly territory to land.</li>"+
+			"<br>return to friendly territories to land.</li>"+
 		"<li>When the player has completed all of this, then he or she may place the units that they have purchased at the " +
 			"<br>beginning of their turn.  Then the game engine counts out the value of the territories they control and gives " +
-			"<br>them that much money.  The next nation then begins their turn.</li></ol>"+
+			"<br>them that much money.  The next nation then begins their turn.  Games last until one side surrenders.</li></ol>"+
 		"To see specific rules for each game, click <em>Game Notes</em> from inside that game, " +
 			"<br> accessible from the <em>Help</em> menu button at the top of the screen inside a game.</p>";
 
@@ -206,7 +206,7 @@ public class MetaSetupPanel extends SetupPanel
 		editorPane.setContentType("text/html");
 		editorPane.setText(text);
 
-		JScrollPane scroll = new JScrollPane(editorPane, JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
+		JScrollPane scroll = new JScrollPane(editorPane, JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED);
 		scroll.setBorder(null);
 		
     	JOptionPane.showMessageDialog(JOptionPane.getFrameForComponent(getParent()),
